# mandelbrot-opencl

./: CMakeLists.txt  README.md  main.cpp  mandelbrot.cl  mandelbrot.cpp  pre_include.h  shaders.h  util.cpp  util.h
CMakeModules/: FindGLFW.cmake
